--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-editando arquivo
+
+<html>
+	<head>
+		<title> Aula 02 -Disign para WEB </title>
+	</head>
+
+<body>
+	<p><font face="arial" color=#000000 times=12>
+	AULA DE DESIGN </FONT></p>
+	
+	<center><img src ="leao.jpg" height=150px width=170px></center>
+	
+	<br/>
+	
+	<hr>
+		
+		
+		<center><h1><font face="arial" Color=fff000> 
+		Listas em HTML </font></h1></center>
+		
+		<H2><p> Lista Ordenadas: </p></h2>
+			
+			<ol type=I start=5>
+				<li> mouse </li>
+				<li> teclado </li>
+				<li> gabinete </li>
+			</ol>
+			
+	<hr>
+	
+		<h2><p> Listas Não ordenadas </p></h2>
+			
+			<ul type=circle>
+				<li> HTML</li>
+				<li> Css</li>
+				<li> java</li>
+			</ul>
+		
+		
+	
+	
+
+
+
+
+</body>
+</html>
